syntax = "proto3";

option csharp_namespace = "Greeter";

package greeter;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The greeting service definition.
service TradeServiceStreamer {
  rpc GetAllTrades (TradeRequest) returns (stream TradeDataContract);
}

message TradeRequest{
}

message TradeDataContract{
    int32 id = 1;
    string counterparty = 2;
    string currency =3;
    int32 notional = 4;
}

